--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "qs": "^6.12.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -21,7 +24,9 @@
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
+    "@types/qs": "^6.9.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
