--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "cookie": "^0.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
     "qs": "^6.12.0",
     "query-string": "^9.0.0",
     "react": "^18",
