--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
-    "js-cookie": "^3.0.5",
+    "cookies-next": "^4.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
@@ -24,7 +24,6 @@
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
