--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "cookies-next": "^4.2.1",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
