--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ workbox-*
 next-env.d.ts
 
 .env
+.env.staging
+.env.production
 
 # intelliJ Webstorm
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm,intellij
